--- a/sofa-ark-bom/pom.xml
+++ b/sofa-ark-bom/pom.xml
@@ -30,6 +30,7 @@
         <maven.plugin.api.version>3.8.1</maven.plugin.api.version>
         <maven.plugin.annotations.version>3.6.1</maven.plugin.annotations.version>
         <maven.dependency.plugin.version>3.2.0</maven.dependency.plugin.version>
+        <maven.help.plugin.version>3.4.0</maven.help.plugin.version>
         <maven.common.artifact.filters.version>3.2.0</maven.common.artifact.filters.version>
 
         <plexus.utils.version>3.3.0</plexus.utils.version>
@@ -276,6 +277,11 @@
                 <groupId>org.apache.maven</groupId>
                 <artifactId>maven-archiver</artifactId>
                 <version>${maven.archiver.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-help-plugin</artifactId>
+                <version>${maven.help.plugin.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.maven.shared</groupId>
