--- a/sofa-ark-parent/support/ark-maven-plugin/pom.xml
+++ b/sofa-ark-parent/support/ark-maven-plugin/pom.xml
@@ -114,6 +114,12 @@
             <version>5.8.8</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.28</version>
+        </dependency>
     </dependencies>
 
     <build>
